agregando nuevas secciones y maquetando

--- a/alimentos.html
+++ b/alimentos.html
@@ -16,7 +16,7 @@
        
             <!-- Secciones - Lista No Ordenada -->
             <!-- Ruta Relatica - index-contacto -->
-            <a href="./index.html">
+            <a class="row logo" href="./index.html">
                     <img src="./logo-firulais-img/IMG-4002.PNG" alt="logo">
                 </a>  
          <nav class="row">
