agregado de transformaciones para segunda entrega de proyecto

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
          <nav class="row">
             <!-- Secciones - Lista No Ordenada -->
             <ul class="row justify-content-center">
-                <li class="col li"><a href="./index.html">Inicio</a></li>
+                <li class="col li menuenlinea"><a href="./index.html">Inicio</a></li>
                 <li class="col li"><a href="./alimentos.html">Alimentos</a>
                 </li>
                 <li class="col li"><a href="./accesorios.html">Accesorios</a></li>
